// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`favicon > should match previous snapshot 1`] = `
"data:image/svg+xml;utf8,<svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
		<style>
			.bar {
				fill: %23edf2f7;
			}
			.bar.selected {
				fill: %2337dc66;
			}
			@media (prefers-color-scheme: dark) {
				.bar {
					fill: %23929fad;
				}
			}
		</style>
		<rect class="bar selected" x="1" y="1" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="4" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="7" width="14" height="2" rx="1"/>
		<rect class="bar selected" x="1" y="10" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="13" width="14" height="2" rx="1"/>
	</svg>"
`;

exports[`favicon > should match previous snapshot 2`] = `
"data:image/svg+xml;utf8,<svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
		<style>
			.bar {
				fill: %23edf2f7;
			}
			.bar.selected {
				fill: %2337dc66;
			}
			@media (prefers-color-scheme: dark) {
				.bar {
					fill: %23929fad;
				}
			}
		</style>
		<rect class="bar " x="1" y="1" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="4" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="7" width="14" height="2" rx="1"/>
		<rect class="bar selected" x="1" y="10" width="14" height="2" rx="1"/>
		<rect class="bar " x="1" y="13" width="14" height="2" rx="1"/>
	</svg>"
`;
